--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "4.5.0",
     "bootstrap-vue": "2.15.0",
     "chart.js": "2.9.3",
@@ -21,6 +22,7 @@
     "vue-chartjs": "3.5.0",
     "vue-clipboard2": "0.3.1",
     "vue-flatpickr-component": "8.1.5",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "3.3.4",
     "vue2-transitions": "0.3.0"
   },
